fix(inspector): add layout containment for project_wrap

--- a/core/inspector/css/inspector.less
+++ b/core/inspector/css/inspector.less
@@ -31,6 +31,10 @@
 		>div {
 			contain: content;
 			border-bottom: 1px solid @color_grey_13;
+
+			&.project_wrap {
+				contain: layout;
+			}
 		}
 
 		// icon_arrow
